# api/swagger/swagger.yaml
@@ -1,12 +1,11 @@
 swagger: "2.0"
 info:
-  version: "0.0.1"
+  version: "1.0.0"
   title: Schedule API
 # during dev, should point to your local machine
 host: localhost:10010
 # basePath prefixes all resource paths 
 basePath: /v1
-# 
 schemes:
   # tip: remove http to make production-grade
   - http
@@ -19,17 +18,18 @@ consumes:
 produces:
   - application/json
 paths:
-  /schedule/event/{sellerId}:
+  /schedule/event:
     # binds a127 app logic to a route
-    x-swagger-router-controller: "schedule"
+    x-swagger-router-controller: "schedule/event"
     get:
       tags:
-        - "schedule"
-      description: Returns 'Schedule' of Seller
-      operationId: getSchedule
+      - "schedule"
+      - "event"
+      description: Returns 'Event' of Schedule by Seller
+      operationId: getEvents
       parameters:
         - name: sellerId
-          in: path
+          in: query
           description: The schedule of the seller
           required: true
           type: string
@@ -37,21 +37,20 @@ paths:
         "200":
           description: Success
           schema:
-            # a pointer to a definition
             $ref: "#/definitions/ScheduleResponse"
-        # responses may fall through to errors
         default:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
     post:
       tags:
-        - "schedule"
-      summary: "Returns 'Schedule' of Seller"
-      operationId: "createSchedule"
+      - "schedule"
+      - "event"
+      summary: Create 'Event' of Schedule by Seller
+      operationId: "createEvent"
       parameters:
         - name: "sellerId"
-          in: "path"
+          in: "query"
           description: "The schedule of the seller"
           required: true
           type: string
@@ -59,7 +58,7 @@ paths:
           in: "body"
           required: false
           schema:
-            $ref: "#/definitions/EventSchedule"
+            $ref: "#/definitions/CreateEvent"
       responses:
         "200":
           description: "Success"
@@ -69,48 +68,15 @@ paths:
           description: "Error"
           schema:
             $ref: "#/definitions/ErrorResponse"
-  /schedule/event/{sellerId}/{eventId}:
-    x-swagger-router-controller: "event"
-    get:
-      tags:
-        - "event"
-      description: Returns 'EventSchedule' of Seller
-      operationId: "getEvent"
-      parameters:
-        - name: "sellerId"
-          in: "path"
-          description: "The schedule of the seller"
-          required: true
-          type: string
-        - name: "eventId"
-          in: "path"
-          description: "The schedule of the seller"
-          required: true
-          type: string
-      responses:
-        "200":
-          description: Success
-          schema:
-            # a pointer to a definition
-            $ref: "#/definitions/ScheduleResponse"
-        # responses may fall through to errors
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
     put:
       tags:
-        - "schedule"
-      summary: "Returns 'Schedule' of Seller"
+      - "schedule"
+      - "event"
+      summary: Update 'Event' of Schedule by Seller
       operationId: "updateEvent"
       parameters:
         - name: "sellerId"
-          in: "path"
-          description: "The schedule of the seller"
-          required: true
-          type: string
-        - name: "eventId"
-          in: "path"
+          in: "query"
           description: "The schedule of the seller"
           required: true
           type: string
@@ -118,7 +84,7 @@ paths:
           in: "body"
           required: false
           schema:
-            $ref: "#/definitions/EventSchedule"
+            $ref: "#/definitions/Event"
       responses:
         "200":
           description: "Success"
@@ -128,33 +94,32 @@ paths:
           description: "Error"
           schema:
             $ref: "#/definitions/ErrorResponse"
-  /schedule/event/{sellerId}/{eventId}/{active}:
-    x-swagger-router-controller: "event"
+  /schedule/event/change-status:
+    x-swagger-router-controller: "schedule/event"
     put:
       tags:
-        - "event"
-      summary: "Returns 'Schedule' of Seller"
-      operationId: "changeStatusEvent"
+      - "schedule"
+      - "event"
+      - "status"
+      summary: Enable or disable an 'Event'
+      operationId: "eventStatus"
       parameters:
         - name: "sellerId"
-          in: "path"
+          in: "query"
           description: "The schedule of the seller"
           required: true
           type: string
-        - name: "active"
-          in: "path"
-          description: "The schedule of the seller"
-          required: true
-          type: string
-          default: enable
-          enum:
-          - enable
-          - disable
         - name: "eventId"
-          in: "path"
+          in: "query"
           description: "The schedule of the seller"
           required: true
           type: string
+        - name: "isActive"
+          in: "query"
+          description: "The schedule of the seller"
+          required: true
+          type: boolean
+          default: true
       responses:
         "200":
           description: "Success"
@@ -168,7 +133,7 @@ paths:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
-  EventSchedule:
+  Event:
     type: "object"
     properties:
       id:
@@ -189,9 +154,27 @@ definitions:
           - holidays
       active:
         type: "boolean"
-        default: false
-    xml:
-      name: "Schedule"
+        default: true
+  CreateEvent:
+    type: "object"
+    properties:
+      startTime:
+        type: "string"
+        default: "2017-12-31T00:00:01.01Z"
+      endTime:
+        type: "string"
+        default: "2017-12-31T23:59:59.59Z"
+      event:
+        type: "string"
+        default: lack_of_delivery_staff
+        enum:
+          - lack_of_delivery_staff
+          - connection issues
+          - overloaded
+          - holidays
+      active:
+        type: "boolean"
+        default: true
   ScheduleResponse:
     required:
       - message
